force-app/main/default/objects/Form_Fields__c/Form_Fields__c.object-meta.xml
<CustomObject>
    <label>Form Fields</label>
    <nameField>
        <label>Form_Fields Label</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Form_Fields</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>