force-app/main/default/objects/Form_Fields__c/fields/Field_Mapping__c.field-meta.xml
<CustomField>
    <fullName>Field_Mapping__c</fullName>
    <label>Field_Mapping</label>
    <length>255</length>
    <type>Text</type>
</CustomField>