force-app/main/default/objects/Form_Fields__c/fields/Field_Order__c.field-meta.xml
<CustomField>
    <fullName>Field_Order__c</fullName>
    <label>Field_Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>