force-app/main/default/objects/Form_Fields__c/fields/Field_Properties__c.field-meta.xml
<CustomField>
    <fullName>Field_Properties__c</fullName>
    <label>Field_Properties</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>