force-app/main/default/objects/Form_Fields__c/fields/Field_Styling__c.field-meta.xml
<CustomField>
    <fullName>Field_Styling__c</fullName>
    <label>Field_Styling</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>