force-app/main/default/objects/Form_Fields__c/fields/Field_Validations__c.field-meta.xml
<CustomField>
    <fullName>Field_Validations__c</fullName>
    <label>Field Validations</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>