force-app/main/default/objects/Form_Fields__c/fields/Form_Page__c.field-meta.xml
<CustomField>
    <fullName>Form_Page__c</fullName>
    <label>Form Page</label>
    <referenceTo>Form_Page__c</referenceTo>
    <relationshipLabel>Form_Fields</relationshipLabel>
    <relationshipName>Form_Fields</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>