force-app/main/default/objects/Form_Fields__c/fields/Mapped_Obj__c.field-meta.xml
<CustomField>
    <fullName>Mapped_Obj__c</fullName>
    <description>This field store Mapped Object field</description>
    <label>Mapped_Obj</label>
    <length>100</length>
    <type>Text</type>
</CustomField>